; ModuleID = '/home/carl/AnghaBench/php-src/sapi/phpdbg/extr_phpdbg_bp.c_phpdbg_find_breakpoint_symbol.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/phpdbg/extr_phpdbg_bp.c_phpdbg_find_breakpoint_symbol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }
%struct.TYPE_5__ = type { i64, i64 }

@ZEND_USER_FUNCTION = common dso_local global i64 0, align 8
@bp = common dso_local global i32 0, align 4
@PHPDBG_BREAK_SYM = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [5 x i8] c"main\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_6__*)* @phpdbg_find_breakpoint_symbol to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @phpdbg_find_breakpoint_symbol(%struct.TYPE_6__* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @ZEND_USER_FUNCTION, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %49

13:                                               ; preds = %1
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %15 = bitcast %struct.TYPE_6__* %14 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %15, %struct.TYPE_5__** %4, align 8
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %13
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %22 = call i32* @phpdbg_find_breakpoint_method(%struct.TYPE_5__* %21)
  store i32* %22, i32** %2, align 8
  br label %49

23:                                               ; preds = %13
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %42

28:                                               ; preds = %23
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = call i32* @zend_string_tolower(i64 %31)
  store i32* %32, i32** %6, align 8
  %33 = load i32, i32* @bp, align 4
  %34 = call i32* @PHPDBG_G(i32 %33)
  %35 = load i64, i64* @PHPDBG_BREAK_SYM, align 8
  %36 = getelementptr inbounds i32, i32* %34, i64 %35
  %37 = load i32*, i32** %6, align 8
  %38 = call i32* @zend_hash_find_ptr(i32* %36, i32* %37)
  store i32* %38, i32** %5, align 8
  %39 = load i32*, i32** %6, align 8
  %40 = call i32 @zend_string_release(i32* %39)
  %41 = load i32*, i32** %5, align 8
  store i32* %41, i32** %2, align 8
  br label %49

42:                                               ; preds = %23
  %43 = load i32, i32* @bp, align 4
  %44 = call i32* @PHPDBG_G(i32 %43)
  %45 = load i64, i64* @PHPDBG_BREAK_SYM, align 8
  %46 = getelementptr inbounds i32, i32* %44, i64 %45
  %47 = call i32 @ZEND_STRL(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %48 = call i32* @zend_hash_str_find_ptr(i32* %46, i32 %47)
  store i32* %48, i32** %2, align 8
  br label %49

49:                                               ; preds = %42, %28, %20, %12
  %50 = load i32*, i32** %2, align 8
  ret i32* %50
}

declare dso_local i32* @phpdbg_find_breakpoint_method(%struct.TYPE_5__*) #1

declare dso_local i32* @zend_string_tolower(i64) #1

declare dso_local i32* @zend_hash_find_ptr(i32*, i32*) #1

declare dso_local i32* @PHPDBG_G(i32) #1

declare dso_local i32 @zend_string_release(i32*) #1

declare dso_local i32* @zend_hash_str_find_ptr(i32*, i32) #1

declare dso_local i32 @ZEND_STRL(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
